--- a/SaleApp/src/main/resources/configs.properties
+++ b/SaleApp/src/main/resources/configs.properties
@@ -3,3 +3,6 @@
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 
 PAGE_SIZE = 3
+cloudinary.cloud_name=dxxwcby8l
+cloudinary.api_id=448651448423589
+cloudinary.api_secret=ftGud0r1TTqp0CGp5tjwNmkAm-A
